# forge

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  index.html
config/: config.toml
crates/forge-adapters/: Cargo.toml
crates/forge-adapters/src/: lib.rs
crates/forge-adapters/src/inbound/http/: mod.rs  router.rs
crates/forge-adapters/src/inbound/http/handlers/: chat.rs  feedback.rs  mod.rs  providers.rs
crates/forge-application/: Cargo.toml
crates/forge-application/src/: lib.rs
crates/forge-application/src/services/: media_prompt_builder.rs  mod.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: lib.rs
crates/forge-core/src/domain/: mod.rs
crates/forge-core/src/domain/value_objects/: expertise_level.rs  knowledge_level.rs  media_type.rs  mod.rs
crates/forge-infrastructure/: Cargo.toml
crates/forge-infrastructure/src/: main.rs
crates/forge-infrastructure/static/: index.html
forge-knowledge/: domains.toml
migrations/: 0001_initial.sql  002_expertise_level.sql  003_provider_keys.sql  004_lead_dna.sql
scripts/: install-linux.sh  install-mac.sh  install-windows.ps1  install-wsl.sh  install.sh
