[package]
name = "forge-infrastructure"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
axum.workspace = true
forge-adapters = { path = "../forge-adapters" }
forge-application = { path = "../forge-application" }
forge-core = { path = "../forge-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true